--- a/ClientApp/src/app/table/table.component.html
+++ b/ClientApp/src/app/table/table.component.html
@@ -4,8 +4,8 @@
         <div class="col-md-12">
           <div class="card">
             <div class="card-header card-header-primary">
-              <h4 class="card-title ">Simple Table</h4>
-              <p class="card-category"> Here is a subtitle for this table</p>
+              <h4 class="card-title ">Tweet Table</h4>
+              <p class="card-category">List of all searched tweets</p>
             </div>
             <div class="card-body">
               <div class="table-responsive">
@@ -18,16 +18,21 @@
                       Name
                     </th>
                     <th>
-                      Country
+                      Text
                     </th>
                     <th>
-                      City
-                    </th>
-                    <th>
-                      Salary
+                      Created it
                     </th>
                   </thead>
-                  <tbody>
+                  <ul>
+                    <!-- <li *ngFor="let tweet of tweetsUrl">
+                      
+                    </li> -->
+
+                    {{tweets}} 
+
+                  </ul>
+                  <!-- <tbody >
                     <tr>
                       <td>
                         1
@@ -36,101 +41,13 @@
                         Dakota Rice
                       </td>
                       <td>
-                        Niger
-                      </td>
-                      <td>
-                        Oud-Turnhout
+                        lorem ipsun use kesa 
                       </td>
                       <td class="text-primary">
                         $36,738
                       </td>
                     </tr>
-                    <tr>
-                      <td>
-                        2
-                      </td>
-                      <td>
-                        Minerva Hooper
-                      </td>
-                      <td>
-                        Curaçao
-                      </td>
-                      <td>
-                        Sinaai-Waas
-                      </td>
-                      <td class="text-primary">
-                        $23,789
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>
-                        3
-                      </td>
-                      <td>
-                        Sage Rodriguez
-                      </td>
-                      <td>
-                        Netherlands
-                      </td>
-                      <td>
-                        Baileux
-                      </td>
-                      <td class="text-primary">
-                        $56,142
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>
-                        4
-                      </td>
-                      <td>
-                        Philip Chaney
-                      </td>
-                      <td>
-                        Korea, South
-                      </td>
-                      <td>
-                        Overland Park
-                      </td>
-                      <td class="text-primary">
-                        $38,735
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>
-                        5
-                      </td>
-                      <td>
-                        Doris Greene
-                      </td>
-                      <td>
-                        Malawi
-                      </td>
-                      <td>
-                        Feldkirchen in Kärnten
-                      </td>
-                      <td class="text-primary">
-                        $63,542
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>
-                        6
-                      </td>
-                      <td>
-                        Mason Porter
-                      </td>
-                      <td>
-                        Chile
-                      </td>
-                      <td>
-                        Gloucester
-                      </td>
-                      <td class="text-primary">
-                        $78,615
-                      </td>
-                    </tr>
-                  </tbody>
+                  </tbody> -->
                 </table>
               </div>
             </div>
