--- a/ClientApp/src/app/dashboard/dashboard.component.html
+++ b/ClientApp/src/app/dashboard/dashboard.component.html
@@ -3,35 +3,35 @@
     <div class="row">
       <div class="col-lg-3 col-md-6 col-sm-6">
         <div class="card card-stats">
-          <div class="card-header card-header-warning card-header-icon">
+          <div class="card-header card-header-success card-header-icon">
             <div class="card-icon">
-              <i class="material-icons">content_copy</i>
+              <i class="material-icons">sentiment_very_satisfied</i>
             </div>
-            <p class="card-category">Used Space</p>
-            <h3 class="card-title">49/50
-              <small>GB</small>
-            </h3>
+            <p class="card-category">Positive analysis</p>
+            <h3 class="card-title">55%</h3>
           </div>
           <div class="card-footer">
             <div class="stats">
-              <i class="material-icons text-danger">warning</i>
-              <a href="#pablo">Get More Space...</a>
+              <!-- <i class="material-icons">date_range</i> Last 24 Hours -->
             </div>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-md-6 col-sm-6">
         <div class="card card-stats">
-          <div class="card-header card-header-success card-header-icon">
+          <div class="card-header card-header-warning card-header-icon">
             <div class="card-icon">
-              <i class="material-icons">store</i>
+              <i class="material-icons">calendar_today</i>
             </div>
-            <p class="card-category">Revenue</p>
-            <h3 class="card-title">$34,245</h3>
+            <p class="card-category">Historic</p>
+            <h3 class="card-title">30/40
+              <small>days</small>
+            </h3>
           </div>
           <div class="card-footer">
             <div class="stats">
-              <i class="material-icons">date_range</i> Last 24 Hours
+              <!-- <i class="material-icons text-danger">warning</i>
+              <a href="#pablo">Get More Space...</a> -->
             </div>
           </div>
         </div>
@@ -40,14 +40,14 @@
         <div class="card card-stats">
           <div class="card-header card-header-danger card-header-icon">
             <div class="card-icon">
-              <i class="material-icons">info_outline</i>
+              <i class="material-icons">sentiment_very_dissatisfied</i>
             </div>
-            <p class="card-category">Fixed Issues</p>
-            <h3 class="card-title">75</h3>
+            <p class="card-category">Negative analysis</p>
+            <h3 class="card-title">45%</h3>
           </div>
           <div class="card-footer">
             <div class="stats">
-              <i class="material-icons">local_offer</i> Tracked from Github
+              <!-- <i class="material-icons">local_offer</i> Tracked from Github -->
             </div>
           </div>
         </div>
@@ -58,12 +58,12 @@
             <div class="card-icon">
               <i class="fa fa-twitter"></i>
             </div>
-            <p class="card-category">Followers</p>
-            <h3 class="card-title">+245</h3>
+            <p class="card-category">Number of tweets</p>
+            <h3 class="card-title">205</h3>
           </div>
           <div class="card-footer">
             <div class="stats">
-              <i class="material-icons">update</i> Just Updated
+              <!-- <i class="material-icons">update</i> Just Updated -->
             </div>
           </div>
         </div>
@@ -76,9 +76,9 @@
             <div class="ct-chart" id="dailySalesChart"></div>
           </div>
           <div class="card-body">
-            <h4 class="card-title">Daily Sales</h4>
+            <h4 class="card-title">Positive score</h4>
             <p class="card-category">
-              <span class="text-success"><i class="fa fa-long-arrow-up"></i> 55% </span> increase in today sales.</p>
+              <span class="text-success"><i class="fa fa-long-arrow-up"></i> 55% </span> Last Campaign Performance</p>
           </div>
           <div class="card-footer">
             <div class="stats">
@@ -89,11 +89,11 @@
       </div>
       <div class="col-md-4">
         <div class="card card-chart">
-          <div class="card-header card-header-warning">
-            <div class="ct-chart" id="websiteViewsChart"></div>
+          <div class="card-header card-header-danger">
+            <div class="ct-chart" id="completedTasksChart"></div>
           </div>
           <div class="card-body">
-            <h4 class="card-title">Email Subscriptions</h4>
+            <h4 class="card-title">Negative score</h4>
             <p class="card-category">Last Campaign Performance</p>
           </div>
           <div class="card-footer">
@@ -105,11 +105,11 @@
       </div>
       <div class="col-md-4">
         <div class="card card-chart">
-          <div class="card-header card-header-danger">
-            <div class="ct-chart" id="completedTasksChart"></div>
+          <div class="card-header card-header-warning">
+            <div class="ct-chart" id="websiteViewsChart"></div>
           </div>
           <div class="card-body">
-            <h4 class="card-title">Completed Tasks</h4>
+            <h4 class="card-title">Historic</h4>
             <p class="card-category">Last Campaign Performance</p>
           </div>
           <div class="card-footer">
