--- a/ClientApp/src/app/side-bar/side-bar.component.html
+++ b/ClientApp/src/app/side-bar/side-bar.component.html
@@ -39,7 +39,7 @@
     <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
       <div class="container-fluid">
         <div class="navbar-wrapper">
-          <a class="navbar-wrapper" style="font-size:1.8em;" href="#pablo">Dashboard</a>
+          <a class="navbar-wrapper" style="font-size:1.8em;" href="#pablo">Dashboard: {{value}}</a>
         </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
           <span class="sr-only">Toggle navigation</span>
@@ -50,12 +50,12 @@
         <div class="collapse navbar-collapse justify-content-end">
           <form class="navbar-form">
             <div class="input-group no-border">
-              <input type="text" value="" class="form-control" style="width: 500px;" placeholder="Search tweets...">
+              <input type="text" value="" class="form-control" style="width: 500px;" placeholder="Search tweets..." #box (keyup.enter)="onEnter(box.value)" >
             </div>
             <button type="submit" class="btn btn-white btn-round btn-just-icon">
-                <i class="material-icons">search</i>
-                <div class="ripple-container"></div>
-              </button>
+              <i class="material-icons">search</i>
+              <div class="ripple-container"></div>
+            </button>
           </form>
           <ul class="navbar-nav">
             <li class="nav-item">
@@ -71,6 +71,7 @@
       </div>
     </nav>
     <!-- End Navbar -->
+    
     <div class="content">
       <div class="container-fluid">
           <router-outlet></router-outlet>
