--- a/ClientApp/src/app/table/table.component.html
+++ b/ClientApp/src/app/table/table.component.html
@@ -27,10 +27,10 @@
                 <tbody *ngFor="let tweet of tweets" >
                   <tr>
                     <td>
-                      {{tweet.tweetDTO.id}}                      
+                      {{tweet.id}}                      
                     </td>
                     <td>
-                      {{tweet.tweetDTO.user.name}}                      
+                      {{tweet.name}}                      
                     </td>
                     <td>
                       {{tweet.text}}                      
