--- a/ClientApp/src/app/table/table.component.html
+++ b/ClientApp/src/app/table/table.component.html
@@ -15,7 +15,7 @@
                     ID
                   </th>
                   <th>
-                    Name
+                    <!-- Name -->
                   </th>
                   <th>
                     Text
@@ -30,7 +30,7 @@
                       {{tweet.id}}                      
                     </td>
                     <td>
-                      {{tweet.name}}                      
+                      <!-- {{tweet.name}}                       -->
                     </td>
                     <td>
                       {{tweet.text}}                      
