--- a/ClientApp/src/app/side-bar/side-bar.component.html
+++ b/ClientApp/src/app/side-bar/side-bar.component.html
@@ -10,8 +10,9 @@
         Twitter Monitor
       </a>
     </div>
-    <div class="sidebar-wrapper" onclick="md.initDashboardPageCharts()" >
-      <ul class="nav">
+    
+    <div class="sidebar-wrapper" >
+      <ul class="nav" onclick="md.initDashboardPageCharts()">
         <li class="nav-item">
           <a class="nav-link" [routerLink]="[ '/dashboard']" >
             <i class="material-icons">dashboard</i>
@@ -79,36 +80,12 @@
     </div>
     <footer class="footer">
       <div class="container-fluid">
-        <nav class="float-left">
-          <ul>
-            <li>
-              <a href="https://www.creative-tim.com">
-                Creative Tim
-              </a>
-            </li>
-            <li>
-              <a href="https://creative-tim.com/presentation">
-                About Us
-              </a>
-            </li>
-            <li>
-              <a href="http://blog.creative-tim.com">
-                Blog
-              </a>
-            </li>
-            <li>
-              <a href="https://www.creative-tim.com/license">
-                Licenses
-              </a>
-            </li>
-          </ul>
-        </nav>
         <div class="copyright float-right" style="font-size:1.5em; padding: 0px;">
           &copy;
           <script>
             document.write(new Date().getFullYear())
           </script>, made with <i class="material-icons">favorite</i> by
-          <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a> for a better web.
+          <a href="" target="_blank">Kleyton Ramos</a>
         </div>
       </div>
     </footer>
