--- a/ClientApp/src/app/dashboard/dashboard.component.html
+++ b/ClientApp/src/app/dashboard/dashboard.component.html
@@ -38,22 +38,6 @@
       </div>
       <div class="col-lg-3 col-md-6 col-sm-6">
         <div class="card card-stats">
-          <div class="card-header card-header-danger card-header-icon">
-            <div class="card-icon">
-              <i class="material-icons">sentiment_very_dissatisfied</i>
-            </div>
-            <p class="card-category">Negative analysis</p>
-            <h3 class="card-title">45%</h3>
-          </div>
-          <div class="card-footer">
-            <div class="stats">
-              <!-- <i class="material-icons">local_offer</i> Tracked from Github -->
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-6 col-sm-6">
-        <div class="card card-stats">
           <div class="card-header card-header-info card-header-icon">
             <div class="card-icon">
               <i class="fa fa-twitter"></i>
@@ -68,57 +52,81 @@
           </div>
         </div>
       </div>
+      <div class="col-lg-3 col-md-6 col-sm-6">
+        <div class="card card-stats">
+          <div class="card-header card-header-danger card-header-icon">
+            <div class="card-icon">
+              <i class="material-icons">sentiment_very_dissatisfied</i>
+            </div>
+            <p class="card-category">Negative analysis</p>
+            <h3 class="card-title">45%</h3>
+          </div>
+          <div class="card-footer">
+            <div class="stats">
+              <!-- <i class="material-icons">local_offer</i> Tracked from Github -->
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="row">
-      <div class="col-md-4">
-        <div class="card card-chart">
-          <div class="card-header card-header-success">
-            <div class="ct-chart" id="dailySalesChart"></div>
-          </div>
-          <div class="card-body">
-            <h4 class="card-title">Positive score</h4>
-            <p class="card-category">
-              <span class="text-success"><i class="fa fa-long-arrow-up"></i> 55% </span> Last Campaign Performance</p>
-          </div>
-          <div class="card-footer">
-            <div class="stats">
-              <i class="material-icons">access_time</i> updated 4 minutes ago
+      <div class="col-md-6">
+        <a href="" [routerLink]="[ '/positive']" onclick="md.initDashboardPageCharts()">
+          <div class="card card-chart">
+            <div class="card-header card-header-success">
+              <!-- <div  class="ct-chart" id="dailySalesChart"></div> -->
+              <chart id="positive"  [options]="positive"> </chart> 
+            </div>
+            <div class="card-body">
+              <h4 class="card-title">Positive score</h4>
+              <p class="card-category">
+                <span class="text-success"><i class="fa fa-long-arrow-up"></i> 55% </span> Last Campaign Performance</p>
+            </div>
+            <div class="card-footer">
+              <div class="stats">
+                <i class="material-icons">access_time</i> updated 4 minutes ago
+              </div>
             </div>
           </div>
-        </div>
+        </a>
       </div>
-      <div class="col-md-4">
-        <div class="card card-chart">
-          <div class="card-header card-header-danger">
-            <div class="ct-chart" id="completedTasksChart"></div>
-          </div>
-          <div class="card-body">
-            <h4 class="card-title">Negative score</h4>
-            <p class="card-category">Last Campaign Performance</p>
-          </div>
-          <div class="card-footer">
-            <div class="stats">
-              <i class="material-icons">access_time</i> campaign sent 2 days ago
+      <div class="col-md-6">
+        <!-- <a href="" [routerLink]="[ '/negative']" > -->
+          <div class="card card-chart">
+            <div class="card-header card-header-danger">
+              <!-- <div class="ct-chart" id="completedTasksChart"></div> -->
+              <chart id="negative"  [options]="negative"> </chart> 
+            </div>
+            <div class="card-body">
+              <h4 class="card-title">Negative score</h4>
+              <p class="card-category">Last Campaign Performance</p>
+            </div>
+            <div class="card-footer">
+              <div class="stats">
+                <i class="material-icons">access_time</i> campaign sent 2 days ago
+              </div>
             </div>
           </div>
-        </div>
+        <!-- </a> -->
       </div>
-      <div class="col-md-4">
-        <div class="card card-chart">
-          <div class="card-header card-header-warning">
-            <div class="ct-chart" id="websiteViewsChart"></div>
-          </div>
-          <div class="card-body">
-            <h4 class="card-title">Historic</h4>
-            <p class="card-category">Last Campaign Performance</p>
-          </div>
-          <div class="card-footer">
-            <div class="stats">
-              <i class="material-icons">access_time</i> campaign sent 2 days ago
+      <!-- <div class="col-md-4">
+        <a href="" [routerLink]="[ '/historic']" >
+          <div class="card card-chart">
+            <div class="card-header card-header-warning">
+              <div class="ct-chart" id="websiteViewsChart"></div>
+            </div>
+            <div class="card-body">
+              <h4 class="card-title">Historic</h4>
+              <p class="card-category">Last Campaign Performance</p>
+            </div>
+            <div class="card-footer">
+              <div class="stats">
+                <i class="material-icons">access_time</i> campaign sent 2 days ago
+              </div>
             </div>
           </div>
-        </div>
-      </div>
+        </a>
+      </div> -->
     </div>
   </div>
 </div>
