--- a/ClientApp/src/app/side-bar/side-bar.component.html
+++ b/ClientApp/src/app/side-bar/side-bar.component.html
@@ -53,19 +53,25 @@
             <div class="input-group no-border">
               <input type="text" value="" class="form-control" style="width: 500px;" placeholder="Search tweets..." #box (keyup)="onEnter(box.value)" >
             </div>
-            <button type="submit" class="btn btn-white btn-round btn-just-icon">
-              <i class="material-icons">search</i>
-              <div class="ripple-container"></div>
-            </button>
           </form>
           <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="#pablo">
-                <i class="material-icons" style="font-size:2.2em;">person</i>
+            <li class="nav-item dropdown">
+              <a class="nav-link" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <i class="material-icons">settings</i>
                 <p class="d-lg-none d-md-block">
-                  Account
+                  Some Actions
                 </p>
               </a>
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                <div class="form-group row">
+                  <label for="example-number-input" class="col-3 col-form-label" ><i class="material-icons">schedule</i></label>
+                  <div class="col-8">
+                    <input class="form-control space-left" type="number" value="1" id="example-number-input">
+                  </div>
+                </div> 
+                <a class="dropdown-item" href="#"><i class="material-icons">save</i><span class="space-span">Save data</span></a>
+                <a class="dropdown-item" href="#"><i class="material-icons">save_alt</i><span class="space-span">Export data</span></a>
+              </div>
             </li>
           </ul>
         </div>
