droga do inferno

--- a/ClientApp/src/app/side-bar/side-bar.component.html
+++ b/ClientApp/src/app/side-bar/side-bar.component.html
@@ -6,7 +6,7 @@
       Tip 2: you can also add an image using data-image tag
   -->
     <div class="logo">
-      <a href="http://www.creative-tim.com" class="simple-text logo-normal">
+      <a href="#" class="simple-text logo-normal">
         Twitter Monitor
       </a>
     </div>
@@ -66,7 +66,7 @@
                 <div class="form-group row">
                   <label for="example-number-input" class="col-3 col-form-label" ><i class="material-icons">schedule</i></label>
                   <div class="col-8">
-                    <input class="form-control space-left" type="number" value="1" id="example-number-input">
+                    <input class="form-control space-left" type="number" value={{test}} id="example-number-input" #time (keyup.enter)="setTime(time.value)">
                   </div>
                 </div> 
                 <a class="dropdown-item" href="#"><i class="material-icons">save</i><span class="space-span">Save data</span></a>
