--- a/ClientApp/src/app/dashboard/dashboard.component.css
+++ b/ClientApp/src/app/dashboard/dashboard.component.css
@@ -12,10 +12,15 @@ chart{
     height: 250px;
   }
 
-  #container {
-	height: 400px;
-	max-width: 800px;
-	margin: 0 auto;
+#neutral {
+    width: 100%;
+    height: 250px;
+}
+
+#container {
+    height: 400px;
+    max-width: 800px;
+    margin: 0 auto;
 }
 
 .highcharts-color-1 tspan{
