--- a/ClientApp/src/app/negative/negative.component.html
+++ b/ClientApp/src/app/negative/negative.component.html
@@ -2,21 +2,25 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-12">
-        <div class="card card-chart">
-          <div class="card-header card-header-danger">
-            <div class="ct-chart" id="completedTasksChart"></div>
-          </div>
-          <div class="card-body">
-            <h4 class="card-title">Negative score</h4>
-            <p class="card-category">Last Campaign Performance</p>
-          </div>
-          <div class="card-footer">
-            <div class="stats">
-              <i class="material-icons">access_time</i> campaign sent 2 days ago
+          <a href="" [routerLink]="[ '/negative']" >
+            <div class="card card-chart">
+              <div class="card-header card-header-danger">
+                <!-- <div class="ct-chart" id="completedTasksChart"></div> -->
+                <chart id="negative"  [options]="negative"> </chart> 
+              </div>
+              <div class="card-body">
+                <h4 class="card-title">Pontuação Negativa</h4>
+                <p class="card-category">
+                    <span class="text-danger"><i class="fa fa-long-arrow-down"></i> {{percentNegative}}% </span> Resultados da ultima pesquisa</p>
+              </div>
+              <div class="card-footer">
+                <div class="stats">
+                  <i class="material-icons">access_time</i> campaign sent 2 days ago
+                </div>
+              </div>
             </div>
-          </div>
+          </a>
         </div>
-      </div>
     </div>
   </div>
 </div>
