--- a/ClientApp/src/app/side-bar/side-bar.component.html
+++ b/ClientApp/src/app/side-bar/side-bar.component.html
@@ -22,14 +22,8 @@
         <li class="nav-item ">
             <a class="nav-link" [routerLink]="[ '/table']">
               <i class="material-icons">content_paste</i>
-              <p>Table tweets</p>
+              <p>Postagens (Tweets)</p>
             </a>
-        </li>
-        <li class="nav-item ">
-          <a class="nav-link" [routerLink]="[ '/user']">
-            <i class="material-icons">person</i>
-            <p>User Profile</p>
-          </a>
         </li>
       </ul>
     </div>
@@ -51,7 +45,7 @@
         <div class="collapse navbar-collapse justify-content-end">
           <form class="navbar-form">
             <div class="input-group no-border">
-              <input type="text" value="" class="form-control" style="width: 500px;" placeholder="Search tweets..." #box (keyup)="onEnter(box.value)" >
+              <input type="text" value="" class="form-control" style="width: 500px;" placeholder="Pesquisar postagens..." #box (keyup)="onEnter(box.value)" >
             </div>
           </form>
           <ul class="navbar-nav">
@@ -69,8 +63,8 @@
                     <input class="form-control space-left" type="number" value={{test}} id="example-number-input" #time (keyup.enter)="setTime(time.value)">
                   </div>
                 </div> 
-                <a class="dropdown-item" href="#"><i class="material-icons">save</i><span class="space-span">Save data</span></a>
-                <a class="dropdown-item" href="#"><i class="material-icons">save_alt</i><span class="space-span">Export data</span></a>
+                <a class="dropdown-item" href="#"><i class="material-icons">save</i><span class="space-span">Salvar dados</span></a>
+                <a role="button" (click)="xlsx()"class="dropdown-item"><i class="material-icons">save_alt</i><span class="space-span">Exportar xlsx</span></a>
               </div>
             </li>
           </ul>
