--- a/ClientApp/src/app/table/table.component.html
+++ b/ClientApp/src/app/table/table.component.html
@@ -4,8 +4,8 @@
       <div class="col-md-12">
         <div class="card">
           <div class="card-header card-header-primary">
-            <h4 class="card-title ">Tweet Table</h4>
-            <p class="card-category">List of all searched tweets</p>
+            <h4 class="card-title ">Tabela postagens</h4>
+            <p class="card-category">Resultado da pesquisa</p>
           </div>
           <div class="card-body">
             <div class="table-responsive">
@@ -18,7 +18,7 @@
                     <!-- Name -->
                   </th>
                   <th>
-                    Text
+                    Postagens
                   </th>
                   <th>
                     <!-- Created it -->
